Added bootstrap to the web project

--- a/ReadinessWeb/wwwroot/index.html
+++ b/ReadinessWeb/wwwroot/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Picturific - Dx Readiness</title>
-    <style>
-        body{
-            background: #e4d964;
-            color: brown;
-        }
-    </style>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/picturiffic.css" />
+
+
 </head>
 <body>
     <h1>Pictureiffic</h1>
@@ -17,10 +15,11 @@
     <p><strong>This needs some serious styling! C'mon, brown and yellow!? Really!?</strong></p>
     <form name="someForm">
         <p>
-        Allright, send us an image! 
-        <input type="file" name="uploadImage" />
+            Allright, send us an image!
+            <input type="file" name="uploadImage" />
         </p>
         <input type="submit" />
     </form>
 </body>
 </html>
+<script src="js/picturiffic.js"></script>
