--- a/ReadinessWeb/wwwroot/index.html
+++ b/ReadinessWeb/wwwroot/index.html
@@ -30,6 +30,8 @@
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script type="text/javascript">
+        
+        function uploadImage
         $(upload).click(function () {
             var serviceURL = '/AjaxTest/FirstAjax';
 
