Added a few missing exception handlers, started working on the javascript side

--- a/ReadinessWeb/wwwroot/index.html
+++ b/ReadinessWeb/wwwroot/index.html
@@ -32,7 +32,7 @@
     <script type="text/javascript">
         
         $(upload).click(function () {
-            var serviceURL = '/AjaxTest/FirstAjax';
+            var serviceURL = '/api/Images';
 
             $.ajax({
                 type: "PUT",
